08/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated russian translation.

08/18/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a hack to disable view specific actions that aren't implemented by
      the view.

08/17/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the German translation thanks to Dieter Steiner

08/12/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added support for running jsXe in a wrapped exe using launch4j.
    * Added an installer for jsXe. The installer can be packaged in an exe for
      easy use by windows users.
    * Moved the windows integration into it's own component in the installer so
      that it won't be installed on systems other than Windows.

08/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new option to the Global Options dialog for the number of undo
      operations to remember.

08/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added undo/redo support for attributes.

08/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added temporary support for undo to jsXe.
    * Added support for undo of text insert and delete.
    * Added support for undo of changes to a node's name, value, and prefix.

08/05/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added core support for Undo/Redo. Undo/Redo will temporarily be view
      specific. Eventually it will be entirely part of core after the
      new data model is complete.

08/03/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added Russian translation thanks to Alexandr Gridnev.

07/26/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the find and findnext actions to use proper messages
      labels.
    * Fixed a bug where the shortcuts for Built-In commands were not being 
      honored.

07/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug with the source view for new users that caused a
      NullPointerException to be thrown when opening the source view.